# ILLIXR-eye

illixr-deps/include/gtsam/: config.h
illixr-deps/lib/: libgtsam_unstable.so.4.3.0  libspatialaudio.so.0.3.0
illixr-deps/lib/cmake/GTSAM/: GTSAM-exports.cmake  GTSAMConfig.cmake  gtsam_extra.cmake
illixr-deps/lib/cmake/GTSAM_UNSTABLE/: GTSAM_UNSTABLEConfig.cmake
illixr-deps/lib/cmake/portaudio/: portaudioTargets-release.cmake  portaudioTargets.cmake
illixr-deps/lib/pkgconfig/: portaudio-2.0.pc  spatialaudio.pc
illixr-deps/share/illixr/profiles/: native_gl.yaml
include/illixr/: opencv_data_types.hpp
plugins/: plugins.yaml
plugins/debugview/: plugin.cpp
plugins/gaze_prediction/: CMakeLists.txt
plugins/offline_eye/: CMakeLists.txt  data_loading.hpp  plugin.cpp
profiles/: headless.yaml  monado_gl.yaml  monado_vk.yaml  native_vk.yaml  offload_device.yaml  offload_monado_vk.yaml
